Made some minor changes.